# ehon

./: .gitignore  README.md  ehon.json  gulpfile.js  index.html  package.json  server.js  tsconfig.json  tslint.json  webpack.config.js
assets/: story.json
assets/story/: story.json.bak
assets/story/ガーン/: story.json
doc/: CONTRIBUTING.md  VERSION.md
src/@types/MyDocument/: index.d.ts
src/script/: animation.ts  calculation.ts  canvas.ts  component.ts  componentEditor.ts  componentManager.ts  domController.ts  dragEventListner.ts  editor.ts  eventListener.ts  fileManager.ts  imageCollection.ts  main.ts  pallet.ts  parameter.ts  renderer.ts  setting.ts  soundPlayer.ts  style.ts  toolPallet.ts  transition.ts  viewer.ts
src/style/: _color.scss  _component.scss  _font.scss  _local.scss  _mixin.scss  _size.scss  main.scss
src/wasm/: Cargo.toml
src/wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
src/wasm/src/: animation.rs  calculation.rs  getter.rs  lib.rs  operation.rs  temp.rs  util.rs
src/wasm/src/calculation/: setter.rs  structure.rs
